Prevent wrap of the info icon.

--- a/metacatui/src/main/webapp/css/metacatui.css
+++ b/metacatui/src/main/webapp/css/metacatui.css
@@ -336,7 +336,7 @@ Bold 700 Italic
 	  	font-weight: 300;
       color: #FDFDFD;
       text-decoration: none;
-      width: 400px;
+      width: 450px;
 	  }
         
     #FeaturedData h2 a {
